P2/data/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: service1
spec:
  selector:
    app: app1
  ports:
  - port: 80
    targetPort: 30001

---
apiVersion: v1
kind: Service
metadata:
  name: service2
spec:
  selector:
    app: app2
  ports:
  - port: 8080
    targetPort: 30002

---
apiVersion: v1
kind: Service
metadata:
  name: service3
spec:
  selector:
    app: app3
  ports:
  - port:  8888
    targetPort: 30003
