P2/data/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: p2-ingress

spec:
  rules:
  - host: app1.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: service1
              port:
                number: 30001

  - host: app2.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: service2
              port:
                number: 30002
  - http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: service3
              port:
                number: 30003
